# FireySniper

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
include/core/: ConfigJson.hpp
include/discord/: Bot.hpp  Service.hpp
include/utility/: System.hpp  Utility.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ConfigJson.cpp
src/discord/: Bot.cpp  CMakeLists.txt  Service.cpp
src/utility/: CMakeLists.txt  System.cpp  Utility.cpp
